Project-001-Roman-Numerals-Converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application.

# Parameters:
  
Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Enable HTTP and SSH for webserver
      GroupName: WebserverSecGrp
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91
      InstanceType: t2.micro
      KeyName: firstkey
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags: 
        - Key: Name
          Value: WebServer-Sena
      UserData:
        Fn::Base64:
        |
          #! /bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          yum install git -y
          cd /home/ec2-user
          wget -P templates https://raw.githubusercontent.com/senaayaz/my-repository/main/Project-001-Roman-Numerals-Converter/templates/index.html
          wget -P templates https://raw.githubusercontent.com/senaayaz/my-repository/main/Project-001-Roman-Numerals-Converter/templates/result.html
          wget https://raw.githubusercontent.com/senaayaz/my-repository/main/Project-001-Roman-Numerals-Converter/app.py
          python3 app.py
          yum install httpd -y
          systemctl start httpd
          systemctl enable httpd
